--- a/src/themes/material/index.scss
+++ b/src/themes/material/index.scss
@@ -12,6 +12,7 @@
 	@import "assets/node";
 	@import "assets/pivot";
 	@import "assets/sort";
+	@import "assets/pin";
 	@import "assets/cell.edit";
 	@import "assets/visibility";
 	@import "assets/column.chooser";
